delete services added

--- a/PackingClassLibrary/App.Config
+++ b/PackingClassLibrary/App.Config
@@ -23,6 +23,7 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IGet" />
         <binding name="BasicHttpBinding_ISave" />
+        <binding name="BasicHttpBinding_IDelete" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -32,6 +33,9 @@
       <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Save.svc/SOA"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
         contract="SetService.ISave" name="BasicHttpBinding_ISave" />
+      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Delete.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDelete"
+        contract="DeleteService.IDelete" name="BasicHttpBinding_IDelete" />
     </client>
   </system.serviceModel>
 </configuration>
