--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -24,13 +24,6 @@
     </compilation>
     <httpRuntime />
   </system.web>
-  <connectionStrings>
-    <add name="Sage_x3v6Entities" connectionString="metadata=res://*/Sage_x3v6.csdl|res://*/Sage_x3v6.ssdl|res://*/Sage_x3v6.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.7\x3v6;initial catalog=x3v6;persist security info=True;user id=etl_admin;password=d0ntl00k;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!-- ################# NY String #############################      -->
-    <add name="local_x3v6Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=192.168.1.7\x3v6;initial catalog=&quot;Shipping Manager&quot;;persist security info=True;user id=etl_admin;password=d0ntl00k;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
-    <!-- ################# India String #############################      -->
-    <!--<add name="local_x3v6Entities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.5.241;initial catalog=x3v6;persist security info=True;user id=sa;password=2wvcDW8j;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  </connectionStrings>
   <system.webServer>
     <directoryBrowse enabled="true" />
     <validation validateIntegratedModeConfiguration="false" />
@@ -45,6 +38,7 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IGet" />
         <binding name="BasicHttpBinding_ISave" />
+        <binding name="BasicHttpBinding_IDelete" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -54,7 +48,9 @@
       <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Save.svc/SOA"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
         contract="SetService.ISave" name="BasicHttpBinding_ISave" />
+      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Delete.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDelete"
+        contract="DeleteService.IDelete" name="BasicHttpBinding_IDelete" />
     </client>
-
   </system.serviceModel>
 </configuration>
