maximum web config file

--- a/PackingClassLibrary/App.Config
+++ b/PackingClassLibrary/App.Config
@@ -15,9 +15,15 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IGet" />
-        <binding name="BasicHttpBinding_ISave" />
-        <binding name="BasicHttpBinding_IDelete" />
+        <binding name="BasicHttpBinding_IGet" allowCookies="true" maxBufferPoolSize="2147483647" maxBufferSize="524288" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="32" maxArrayLength="2147483647" maxStringContentLength="2147483647"/>
+        </binding>
+        <binding name="BasicHttpBinding_ISave" allowCookies="true" maxBufferPoolSize="2147483647" maxBufferSize="524288" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="32" maxArrayLength="2147483647" maxStringContentLength="2147483647"/>
+        </binding>
+        <binding name="BasicHttpBinding_IDelete" allowCookies="true" maxBufferPoolSize="2147483647" maxBufferSize="524288" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="32" maxArrayLength="2147483647" maxStringContentLength="2147483647"/>
+        </binding>
       </basicHttpBinding>
     </bindings>
     <client>
