--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -36,9 +36,12 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IGet" />
-        <binding name="BasicHttpBinding_ISave" />
-        <binding name="BasicHttpBinding_IDelete" />
+        <binding name="BasicHttpBinding_IGet"  maxReceivedMessageSize="2147483647">
+        </binding>
+        <binding name="BasicHttpBinding_ISave"  maxReceivedMessageSize="2147483647">
+        </binding>
+        <binding name="BasicHttpBinding_IDelete" >
+        </binding>
       </basicHttpBinding>
     </bindings>
     <client>
