--- a/PackingClassLibrary/PackingClassLibrary.csproj
+++ b/PackingClassLibrary/PackingClassLibrary.csproj
@@ -139,24 +139,27 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
-    <None Include="Service References\DeleteService\Delete.wsdl" />
-    <None Include="Service References\DeleteService\KrausWarehouseServices.xsd">
+    <None Include="Service References\DeleteService\service.wsdl" />
+    <None Include="Service References\DeleteService\service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\DeleteService\KrausWarehouseServices1.xsd">
+    <None Include="Service References\DeleteService\service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\GetService\Get1.wsdl" />
-    <None Include="Service References\GetService\KrausWarehouseServices.xsd">
+    <None Include="Service References\GetService\Get.wsdl" />
+    <None Include="Service References\GetService\KrausWarehouseServices2.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\GetService\KrausWarehouseServices3.xsd">
+    <None Include="Service References\GetService\KrausWarehouseServices21.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\GetService\KrausWarehouseServices31.xsd">
+    <None Include="Service References\GetService\KrausWarehouseServices22.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\GetService\KrausWarehouseServices32.xsd">
+    <None Include="Service References\GetService\KrausWarehouseServices23.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\GetService\KrausWarehouseServices24.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\GetService\PackingClassLibrary.GetService.AutditDTO.datasource">
@@ -222,10 +225,16 @@
     <None Include="Service References\GetService\PackingClassLibrary.GetService.viewGet_Shipping_DataDTO.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Service References\SetService\KrausWarehouseServices32.xsd">
+    <None Include="Service References\SetService\KrausWarehouseServices.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\SetService\Save1.wsdl" />
+    <None Include="Service References\SetService\KrausWarehouseServices1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\SetService\KrausWarehouseServices2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\SetService\Save.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -257,25 +266,10 @@
     <None Include="Service References\SetService\configuration.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\SetService\KrausWarehouseServices3.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\SetService\KrausWarehouseServices31.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Service References\SetService\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\GetService\KrausWarehouseServices1.disco" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\SetService\KrausWarehouseServices1.disco" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\DeleteService\KrausWarehouseServices.disco" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\DeleteService\configuration91.svcinfo" />
@@ -288,6 +282,12 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\GetService\KrausWarehouseServices.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\SetService\KrausWarehouseServices.disco" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
