--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -36,24 +36,24 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IGet"  maxReceivedMessageSize="2147483647">
-        </binding>
-        <binding name="BasicHttpBinding_ISave"  maxReceivedMessageSize="2147483647">
-        </binding>
-        <binding name="BasicHttpBinding_IDelete" >
-        </binding>
+        <binding name="BasicHttpBinding_IGet" allowCookies="true" maxBufferPoolSize="2147483647"
+          maxReceivedMessageSize="2147483647" />
+        <binding name="BasicHttpBinding_ISave" allowCookies="true" maxBufferPoolSize="2147483647"
+          maxReceivedMessageSize="2147483647" />
+        <binding name="BasicHttpBinding_IDelete" allowCookies="true"
+          maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Get.svc/SOA"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet"
-        contract="GetService.IGet" name="BasicHttpBinding_IGet" />
-      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Save.svc/SOA"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
-        contract="SetService.ISave" name="BasicHttpBinding_ISave" />
-      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Delete.svc/SOA"
+      <endpoint address="http://192.168.5.66/KrausWarehouseServices.Service.Shipping.Delete.svc/SOA"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDelete"
         contract="DeleteService.IDelete" name="BasicHttpBinding_IDelete" />
+      <endpoint address="http://192.168.5.66/KrausWarehouseServices.Service.Shipping.Get.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet"
+        contract="GetService.IGet" name="BasicHttpBinding_IGet" />
+      <endpoint address="http://192.168.5.66/KrausWarehouseServices.Service.Shipping.Save.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
+        contract="SetService.ISave" name="BasicHttpBinding_ISave" />
     </client>
   </system.serviceModel>
 </configuration>
