--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -89,6 +89,7 @@
     <Content Include="Forms\Web Forms\frmChart.aspx" />
     <Content Include="Forms\Web Forms\frmDisableStation.aspx" />
     <Content Include="Forms\Web Forms\frmErrorLog.aspx" />
+    <Content Include="Forms\Web Forms\frmRetunDetail.aspx" />
     <Content Include="Forms\Web Forms\frmRoles.aspx" />
     <Content Include="Forms\Web Forms\frmShipmentInfoDetails.aspx" />
     <Content Include="Forms\Web Forms\frmShippingInfo.aspx" />
@@ -135,6 +136,13 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\Web Forms\frmRetunDetail.aspx.cs">
+      <DependentUpon>frmRetunDetail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Web Forms\frmRetunDetail.aspx.designer.cs">
+      <DependentUpon>frmRetunDetail.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Web Forms\frmRoles.aspx.cs">
       <DependentUpon>frmRoles.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
