--- a/PackingClassLibrary/App.Config
+++ b/PackingClassLibrary/App.Config
@@ -21,6 +21,8 @@
           maxReceivedMessageSize="2147483647" />
         <binding name="BasicHttpBinding_IDelete" allowCookies="true"
           maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" />
+        <binding name="BasicHttpBinding_IGet1" />
+        <binding name="BasicHttpBinding_ISave1" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -33,6 +35,12 @@
       <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Save.svc/SOA"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
         contract="SetService.ISave" name="BasicHttpBinding_ISave" />
+      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.RMA.Get.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet1"
+        contract="GetRGAService.IGet" name="BasicHttpBinding_IGet1" />
+      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.RMA.Save.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave1"
+        contract="SetRGAService.ISave" name="BasicHttpBinding_ISave1" />
     </client>
   </system.serviceModel>
 </configuration>
