--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -42,18 +42,26 @@
           maxReceivedMessageSize="2147483647" />
         <binding name="BasicHttpBinding_IDelete" allowCookies="true"
           maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" />
+        <binding name="BasicHttpBinding_IGet1" />
+        <binding name="BasicHttpBinding_ISave1" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.168.5.66/KrausWarehouseServices.Service.Shipping.Delete.svc/SOA"
+      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Delete.svc/SOA"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDelete"
         contract="DeleteService.IDelete" name="BasicHttpBinding_IDelete" />
-      <endpoint address="http://192.168.5.66/KrausWarehouseServices.Service.Shipping.Get.svc/SOA"
+      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Get.svc/SOA"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet"
         contract="GetService.IGet" name="BasicHttpBinding_IGet" />
-      <endpoint address="http://192.168.5.66/KrausWarehouseServices.Service.Shipping.Save.svc/SOA"
+      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Save.svc/SOA"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
         contract="SetService.ISave" name="BasicHttpBinding_ISave" />
+      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.RMA.Get.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet1"
+        contract="GetRGAService.IGet" name="BasicHttpBinding_IGet1" />
+      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.RMA.Save.svc/SOA"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave1"
+        contract="SetRGAService.ISave" name="BasicHttpBinding_ISave1" />
     </client>
   </system.serviceModel>
 </configuration>
