--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -72,6 +72,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -100,6 +101,7 @@
     <Content Include="Forms\Web Forms\frmUserInformation.aspx" />
     <Content Include="Forms\Web Forms\frmHomePage.aspx" />
     <Content Include="Forms\Web Forms\frmLogin.aspx" />
+    <Content Include="Forms\Web Forms\ImageServer.aspx" />
     <Content Include="Forms\Web Forms\ImageShow.aspx" />
     <Content Include="Forms\Web Forms\rptPacking.aspx" />
     <Content Include="images\KRAUSGRA20Nov2013_05_24_17135_PM.jpeg" />
@@ -152,6 +154,13 @@
     <Compile Include="Forms\Web Forms\frmRoles.aspx.designer.cs">
       <DependentUpon>frmRoles.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Web Forms\ImageServer.aspx.cs">
+      <DependentUpon>ImageServer.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Web Forms\ImageServer.aspx.designer.cs">
+      <DependentUpon>ImageServer.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Web Forms\ImageShow.aspx.cs">
       <DependentUpon>ImageShow.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -161,6 +170,7 @@
     </Compile>
     <Compile Include="Models\ExtensionMethods.cs" />
     <Compile Include="Models\modelExportTo.cs" />
+    <Compile Include="Models\modelImageServer.cs" />
     <Compile Include="Models\modelReturn.cs" />
     <Compile Include="Models\modelRoles.cs" />
     <Compile Include="Views\cDeactivateStation.cs" />
@@ -317,12 +327,13 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>44036</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>
-          </IISUrl>
+          <IISUrl>http://localhost/Shipping/</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://localhost/Shipping/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
