--- a/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/ShippingController(V1.0).csproj
@@ -105,6 +105,7 @@
     <Content Include="Forms\Web Forms\ImageServer.aspx" />
     <Content Include="Forms\Web Forms\ImageShow.aspx" />
     <Content Include="Forms\Web Forms\rptPacking.aspx" />
+    <Content Include="images\KRAUSGRA17Dec2013_08_43_07578_PM.jpeg" />
     <Content Include="PackingIcon.ico" />
     <Content Include="Themes\Images\Arrow.gif" />
     <Content Include="Themes\Images\document-print.png" />
@@ -316,7 +317,6 @@
   <ItemGroup>
     <Folder Include="App_Code\" />
     <Folder Include="App_GlobalResources\" />
-    <Folder Include="images\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
@@ -339,7 +339,6 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>44036</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/Shipping/</IISUrl>
           <IISUrl>http://localhost/ShippingDebug/</IISUrl>
           <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
           <IISAppRootUrl>http://localhost/ShippingDebug/</IISAppRootUrl>
