--- a/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -6,62 +6,49 @@
 <configuration>
   <system.web>
     <httpHandlers>
-      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false" />
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false"/>
     </httpHandlers>
-    <compilation debug="true" targetFramework="4.0">
+    <compilation targetFramework="4.0" debug="true">
       <assemblies>
-        <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
-        <add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
-        <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
-        <add assembly="System.Management, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
-        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
-        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="System.Web.Extensions.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="System.Management, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91"/>
+        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91"/>
       </assemblies>
       <buildProviders>
-        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
       </buildProviders>
     </compilation>
-    <httpRuntime />
+    <httpRuntime/>
   </system.web>
   <system.webServer>
-    <directoryBrowse enabled="true" />
-    <validation validateIntegratedModeConfiguration="false" />
+    <directoryBrowse enabled="true"/>
+    <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
-      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
     </handlers>
-    <httpRedirect enabled="false" destination="http://192.168.5.66/Forms/Web%20Forms/frmLogin.aspx" exactDestination="true" childOnly="true" />
-        <defaultDocument enabled="true" />
+    <httpRedirect enabled="false" destination="http://192.168.5.66/Forms/Web%20Forms/frmLogin.aspx" exactDestination="true" childOnly="true"/>
+    <defaultDocument enabled="true"/>
   </system.webServer>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IGet" allowCookies="true" maxBufferPoolSize="2147483647"
-          maxReceivedMessageSize="2147483647" />
-        <binding name="BasicHttpBinding_ISave" allowCookies="true" maxBufferPoolSize="2147483647"
-          maxReceivedMessageSize="2147483647" />
-        <binding name="BasicHttpBinding_IDelete" allowCookies="true"
-          maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" />
-        <binding name="BasicHttpBinding_IGet1" />
-        <binding name="BasicHttpBinding_ISave1" />
+        <binding name="BasicHttpBinding_IGet" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"/>
+        <binding name="BasicHttpBinding_ISave" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"/>
+        <binding name="BasicHttpBinding_IDelete" allowCookies="true" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"/>
+        <binding name="BasicHttpBinding_IGet1"/>
+        <binding name="BasicHttpBinding_ISave1"/>
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Delete.svc/SOA"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDelete"
-        contract="DeleteService.IDelete" name="BasicHttpBinding_IDelete" />
-      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Get.svc/SOA"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet"
-        contract="GetService.IGet" name="BasicHttpBinding_IGet" />
-      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.Shipping.Save.svc/SOA"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave"
-        contract="SetService.ISave" name="BasicHttpBinding_ISave" />
-      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.RMA.Get.svc/SOA"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet1"
-        contract="GetRGAService.IGet" name="BasicHttpBinding_IGet1" />
-      <endpoint address="http://192.168.5.212/KrausWarehouseServices.Service.RMA.Save.svc/SOA"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave1"
-        contract="SetRGAService.ISave" name="BasicHttpBinding_ISave1" />
+      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.Shipping.Delete.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDelete" contract="DeleteService.IDelete" name="BasicHttpBinding_IDelete"/>
+      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.RMA.Get.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet1" contract="GetRGAService.IGet" name="BasicHttpBinding_IGet1"/>
+      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.RMA.Save.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave1" contract="SetRGAService.ISave" name="BasicHttpBinding_ISave1"/>
+      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.Shipping.Get.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IGet" contract="GetService.IGet" name="BasicHttpBinding_IGet"/>
+      <endpoint address="http://192.168.1.16/Warehouse Services/KrausWarehouseServices.Service.Shipping.Save.svc/SOA" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISave" contract="SetService.ISave" name="BasicHttpBinding_ISave"/>
     </client>
   </system.serviceModel>
 </configuration>
